--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Crowdfunding product page</title>
-
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
+    <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -23,11 +28,53 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-    </style>
+    </style> -->
+    <script defer src="app.js"></script>
   </head>
   <body>
-    About Discover Get Started Mastercraft Bamboo Monitor Riser A beautiful &
-    handcrafted monitor stand to reduce neck and eye strain. Back this project
+    <div class="cf-container">
+      <div class="cf-nav-bckg">
+        <div class="cf-nav-bar">
+          <img class="cf-nav-img" src="./images/logo.svg" alt="" />
+          <div class="cf-nav-bar-part">
+            <a href="#">About</a>
+            <a href="#">Discover</a>
+            <a href="#">Get Started</a>
+          </div>
+        </div>
+      </div>
+      <div class="cf-content">
+        <div class="cf-head-part">
+          <div class="cf-head-part-text">
+            Mastercraft Bamboo Monitor Riser
+            <span
+              >A beautiful & handcrafted monitor stand to reduce neck and eye
+              strain.</span
+            >
+          </div>
+          <div class="cf-head-buttons">
+            <button class="primary-button">Back this project</button>
+            <div class="special-button">
+              <svg
+                class="bookmark"
+                width="56"
+                height="56"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g fill="none" fill-rule="evenodd">
+                  <circle fill="#2F2F2F" cx="28" cy="28" r="28" />
+                  <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+                </g>
+              </svg>
+              <button class="secondary-button">Bookmark</button>
+            </div>
+          </div>
+        </div>
+        <div class="cf-money-part">dasasdasdas</div>
+        <div class="cf-head-part-logo"></div>
+      </div>
+    </div>
+    <!--  Back this project
     Bookmark $89,914 of $100,000 backed 5,007 total backers 56 days left About
     this project The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
     platform that elevates your screen to a more comfortable viewing height.
@@ -43,45 +90,45 @@
     added to our Backer member list. Shipping is included. 64 left Select Reward
     Mahogany Special Edition Pledge $200 or more You get two Special Edition
     Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left Out of Stock
+    to our Backer member list. Shipping is included. 0 left Out of Stock -->
 
     <!-- Selection modal start -->
 
-    Back this project Want to support us in bringing Mastercraft Bamboo Monitor
+    <!-- Back this project Want to support us in bringing Mastercraft Bamboo Monitor
     Riser out in the world? Pledge with no reward Choose to support us without a
     reward if you simply believe in our project. As a backer, you will be signed
     up to receive product updates via email. Bamboo Stand Pledge $25 or more You
     get an ergonomic stand made of natural bamboo. You've helped us launch our
     promotional campaign, and you’ll be added to a special Backer member list.
-    101 left
+    101 left -->
 
     <!-- Selected pledge start -->
-    Enter your pledge $25 Continue
+    <!-- Enter your pledge $25 Continue -->
     <!-- Selected pledge end -->
 
-    Black Edition Stand Pledge $75 or more You get a Black Special Edition
+    <!-- Black Edition Stand Pledge $75 or more You get a Black Special Edition
     computer stand and a personal thank you. You’ll be added to our Backer
     member list. Shipping is included. 64 left
 
-    <!-- Selected pledge start -->
-    Enter your pledge $75 Continue
+    Selected pledge start -->
+    <!-- Enter your pledge $75 Continue -->
     <!-- Selected pledge end -->
-
+    <!-- 
     Mahogany Special Edition Pledge $200 or more You get two Special Edition
     Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left
+    to our Backer member list. Shipping is included. 0 left -->
 
     <!-- Selected pledge  start -->
-    Enter your pledge $200 Continue
+    <!-- Enter your pledge $200 Continue -->
     <!-- Selected pledge end -->
 
     <!-- Selection modal end -->
 
     <!-- Success modal start -->
 
-    Thanks for your support! Your pledge brings us one step closer to sharing
+    <!-- Thanks for your support! Your pledge brings us one step closer to sharing
     Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our
-    campaign is completed. Got it!
+    campaign is completed. Got it! -->
 
     <!-- Success modal end -->
   </body>
