--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -71,65 +74,43 @@
             </div>
           </div>
         </div>
-        <div class="cf-money-part">dasasdasdas</div>
+        <div class="calc-money">
+          <div class="cf-money-part">
+            <div class="cf-backed">$89,914<span>of $100,000 backed</span></div>
+            <div class="cf-total-backers">5,007<span>total backers</span></div>
+            <div class="cf-days-left">56<span>days left</span></div>
+          </div>
+          <div class="cf-progress-bar">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="80">
+            </div>
+          </div>
+      </div>
+      <div class="cf-about">
+        
+        <div class="cf-text">
+          <h2 class="cf-about-head">About this project</h2>
+          The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+          <span><br><br><br> Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.</span>
+        </div>
+        <div class="cf-bambo">
+          <div class="cf-bambo-head">Bamboo Stand <span>Pledge $25 or more</span></div>
+          <div class="cf-bambo-text">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
+          <div class="cf-left-button"><h1>101 <span>left</span> </h1>
+          <button class="cf-about-primary-button">Select Reward</button></div>
+        </div>
+        <div class="cf-black">
+          <div class="cf-black-head">Black Edition Stand<span>Pledge $75 or more</span></div>
+          <div class="cf-black-text">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
+          <div class="cf-left-button"><h1>64 <span>left</span> </h1>
+          <button class="cf-about-primary-button">Select Reward</button></div>
+        </div>
+        <div class="cf-mahogany">
+          <div class="cf-mahogany-head">Mahogany Special Edition<span>Pledge $200 or more</span></div>
+          <div class="cf-mahogany-text">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included. </div>
+          <div class="cf-left-button"><h1>0<span>left</span> </h1>
+          <button class="cf-about-primary-button">Select Reward</button></div>
+        </div>
       </div>
     </div>
-    <!--  Back this project
-    Bookmark $89,914 of $100,000 backed 5,007 total backers 56 days left About
-    this project The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
-    platform that elevates your screen to a more comfortable viewing height.
-    Placing your monitor at eye level has the potential to improve your posture
-    and make you more comfortable while at work, helping you stay focused on the
-    task at hand. Featuring artisan craftsmanship, the simplicity of design
-    creates extra desk space below your computer to allow notepads, pens, and
-    USB sticks to be stored under the stand. Bamboo Stand Pledge $25 or more You
-    get an ergonomic stand made of natural bamboo. You've helped us launch our
-    promotional campaign, and you’ll be added to a special Backer member list.
-    101 left Select Reward Black Edition Stand Pledge $75 or more You get a
-    Black Special Edition computer stand and a personal thank you. You’ll be
-    added to our Backer member list. Shipping is included. 64 left Select Reward
-    Mahogany Special Edition Pledge $200 or more You get two Special Edition
-    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left Out of Stock -->
-
-    <!-- Selection modal start -->
-
-    <!-- Back this project Want to support us in bringing Mastercraft Bamboo Monitor
-    Riser out in the world? Pledge with no reward Choose to support us without a
-    reward if you simply believe in our project. As a backer, you will be signed
-    up to receive product updates via email. Bamboo Stand Pledge $25 or more You
-    get an ergonomic stand made of natural bamboo. You've helped us launch our
-    promotional campaign, and you’ll be added to a special Backer member list.
-    101 left -->
-
-    <!-- Selected pledge start -->
-    <!-- Enter your pledge $25 Continue -->
-    <!-- Selected pledge end -->
-
-    <!-- Black Edition Stand Pledge $75 or more You get a Black Special Edition
-    computer stand and a personal thank you. You’ll be added to our Backer
-    member list. Shipping is included. 64 left
-
-    Selected pledge start -->
-    <!-- Enter your pledge $75 Continue -->
-    <!-- Selected pledge end -->
-    <!-- 
-    Mahogany Special Edition Pledge $200 or more You get two Special Edition
-    Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included. 0 left -->
-
-    <!-- Selected pledge  start -->
-    <!-- Enter your pledge $200 Continue -->
-    <!-- Selected pledge end -->
-
-    <!-- Selection modal end -->
-
-    <!-- Success modal start -->
-
-    <!-- Thanks for your support! Your pledge brings us one step closer to sharing
-    Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our
-    campaign is completed. Got it! -->
-
-    <!-- Success modal end -->
   </body>
 </html>
