desktop look done

--- a/index.html
+++ b/index.html
@@ -94,23 +94,105 @@
         </div>
         <div class="cf-bambo">
           <div class="cf-bambo-head">Bamboo Stand <span>Pledge $25 or more</span></div>
-          <div class="cf-bambo-text">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
+          <div class="cf-bambo-text mafix">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
           <div class="cf-left-button"><h1>101 <span>left</span> </h1>
           <button class="cf-about-primary-button">Select Reward</button></div>
         </div>
         <div class="cf-black">
-          <div class="cf-black-head">Black Edition Stand<span>Pledge $75 or more</span></div>
-          <div class="cf-black-text">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
+          <div class="cf-black-head ">Black Edition Stand<span>Pledge $75 or more</span></div>
+          <div class="cf-black-text mafix">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
           <div class="cf-left-button"><h1>64 <span>left</span> </h1>
           <button class="cf-about-primary-button">Select Reward</button></div>
         </div>
         <div class="cf-mahogany">
           <div class="cf-mahogany-head">Mahogany Special Edition<span>Pledge $200 or more</span></div>
-          <div class="cf-mahogany-text">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included. </div>
+          <div class="cf-mahogany-text mafix">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included. </div>
           <div class="cf-left-button"><h1>0<span>left</span> </h1>
           <button class="cf-about-primary-button">Select Reward</button></div>
         </div>
       </div>
+     <div class="modal-part">
+        <div class="modal">
+        <div class="modal-content">
+        <div class="cf-text">
+          <h2 class="cf-about-head-back">Back this project
+            <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z" fill="#000" fill-rule="evenodd" opacity=".4"/></svg></h2>
+          Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world? 
+        </div>
+        <div class="cf-bambo mfix">
+          <div class="cf-head-fix">
+            <label class="container"><div class="cf-bambo-head">Pladge with no rewards</div>
+              <input type="radio" checked=" " name="radio">
+              <span class="checkmark"></span>
+            </label>
+          </div>
+          <div class="cf-bambo-text">Choose to support us without a reward if you simply believe in our project. As a backer, you will be signed up to receive product updates via email.</div>
+          <div class="cf-pedge-enter">
+            <div class="pedge-enter-text">Enter your pledge</div>
+            <div class="cf-pedge-enter-buttons">
+              <div class="cf-pedge-enter-input">$<input type="number" min="0"></div>
+              <button class="cf-pedge-button primary-button">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="cf-bambo mfix">
+          <div class="cf-head-fix">
+            <label class="container"><div class="cf-black-head">Bamboo Stand<div class="cf-pledge"><span>Pledge $2  5 or more</span></div></div>
+              <input type="radio" name="radio">
+              <span class="checkmark"></span>
+            </label>
+            <div class="cf-left-button"><h1>64 <span>left</span></h1></div>
+          </div>
+          <div class="cf-bambo-text">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
+          <div class="cf-pedge-enter">
+            <div class="pedge-enter-text">Enter your pledge</div>
+            <div class="cf-pedge-enter-buttons">
+              <div class="cf-pedge-enter-input">$<input type="number" min="75" value="75"></div>
+              <button class="cf-pedge-button primary-button">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="cf-black mfix">
+          <div class="cf-head-fix">
+            <label class="container"><div class="cf-black-head">Black Edition Stand<div class="cf-pledge"><span>Pledge $75 or more</span></div></div>
+              <input type="radio" checked=" " name="radio">
+              <span class="checkmark"></span>
+            </label>
+            <div class="cf-left-button"><h1>101 <span>left</span></h1></div>
+          </div>
+          <div class="cf-black-text">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
+          <div class="cf-pedge-enter">
+            <div class="pedge-enter-text">Enter your pledge</div>
+            <div class="cf-pedge-enter-buttons">
+              <div class="cf-pedge-enter-input">$<input type="number" min="25" value="25"></div>
+              <button class="cf-pedge-button primary-button">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="cf-mahogany mfix">
+          <div class="cf-head-fix notworking">
+            <label class="container"><div class="cf-black-head">Mahogany Special Edition<div class="cf-pledge"><span>Pledge $200 or more</span></div></div>
+              <input type="radio" class="notworking" name="radio">
+              <span class="checkmark"></span>
+            </label>
+            <div class="cf-left-button"><h1>0 <span>left</span></h1></div>
+          </div>
+        <div class="cf-mahogany-text">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.  Shipping is included.</div>  
+        </div>
+      </div>
+    </div>
+     </div>
+    <div class="cf-thank-you">
+      <div class="modal-thank">
+        <div class="modal-content-thank">
+          <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#3CB3AB" cx="32" cy="32" r="32"/><path stroke="#FFF" stroke-width="5" d="M20 31.86L28.093 40 44 24"/></g></svg>
+          <h2 class="cf-about-head-back">Thanks for your support!</h2>
+          Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our campaign is completed.
+          <button class="getit primary-button cf-pedge-button">Get it!</button>
+        </div>
+      </div>
+    </div>
     </div>
   </body>
 </html>
