--- a/index.html
+++ b/index.html
@@ -22,17 +22,7 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Crowdfunding product page</title>
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
-    <script defer src="app.js"></script>
+    <script defer src="./js/app.js"></script>
   </head>
   <body>
     <div class="cf-container">
@@ -44,6 +34,7 @@
             <a href="#">Discover</a>
             <a href="#">Get Started</a>
           </div>
+          <div class="cf-hamburger"></div>
         </div>
       </div>
       <div class="cf-content">
@@ -60,14 +51,15 @@
             <button class="primary-button">Back this project</button>
             <div class="special-button">
               <svg
+              fill=currentColor()
                 class="bookmark"
                 width="56"
                 height="56"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <g fill="none" fill-rule="evenodd">
+                <g fill=currentColor() fill-rule="evenodd">
                   <circle fill="#2F2F2F" cx="28" cy="28" r="28" />
-                  <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+                  <path class="bookmarked" fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
                 </g>
               </svg>
               <button class="secondary-button">Bookmark</button>
@@ -76,8 +68,8 @@
         </div>
         <div class="calc-money">
           <div class="cf-money-part">
-            <div class="cf-backed">$89,914<span>of $100,000 backed</span></div>
-            <div class="cf-total-backers">5,007<span>total backers</span></div>
+            <div class="cf-backed">$50,000<span>of $100,000 backed</span></div>
+            <div class="cf-total-backers">5,000<span>total backers</span></div>
             <div class="cf-days-left">56<span>days left</span></div>
           </div>
           <div class="cf-progress-bar">
@@ -96,19 +88,19 @@
           <div class="cf-bambo-head">Bamboo Stand <span>Pledge $25 or more</span></div>
           <div class="cf-bambo-text mafix">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
           <div class="cf-left-button"><h1>101 <span>left</span> </h1>
-          <button class="cf-about-primary-button">Select Reward</button></div>
+          <button class="cf-about-primary-button cf-about-bambo">Select Reward</button></div>
         </div>
         <div class="cf-black">
           <div class="cf-black-head ">Black Edition Stand<span>Pledge $75 or more</span></div>
           <div class="cf-black-text mafix">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
           <div class="cf-left-button"><h1>64 <span>left</span> </h1>
-          <button class="cf-about-primary-button">Select Reward</button></div>
+          <button class="cf-about-primary-button cf-about-black">Select Reward</button></div>
         </div>
         <div class="cf-mahogany">
           <div class="cf-mahogany-head">Mahogany Special Edition<span>Pledge $200 or more</span></div>
           <div class="cf-mahogany-text mafix">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included. </div>
           <div class="cf-left-button"><h1>0<span>left</span> </h1>
-          <button class="cf-about-primary-button">Select Reward</button></div>
+          <button class="cf-about-primary-button bfix">Select Reward</button></div>
         </div>
       </div>
      <div class="modal-part">
@@ -116,67 +108,67 @@
         <div class="modal-content">
         <div class="cf-text">
           <h2 class="cf-about-head-back">Back this project
-            <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg">
+            <svg class="goBack" width="15" height="15" xmlns="http://www.w3.org/2000/svg">
               <path d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z" fill="#000" fill-rule="evenodd" opacity=".4"/></svg></h2>
           Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world? 
         </div>
-        <div class="cf-bambo mfix">
+        <div class="cf-free mfix">
           <div class="cf-head-fix">
-            <label class="container"><div class="cf-bambo-head">Pladge with no rewards</div>
-              <input type="radio" checked=" " name="radio">
+            <label class="container"><div class="cf-bambo-head pfix">Pladge with no rewards</div>
+              <input type="radio" class="cf-checked-fr" name="radio">
               <span class="checkmark"></span>
             </label>
           </div>
           <div class="cf-bambo-text">Choose to support us without a reward if you simply believe in our project. As a backer, you will be signed up to receive product updates via email.</div>
-          <div class="cf-pedge-enter">
+          <div class="cf-pedge-enter-free">
             <div class="pedge-enter-text">Enter your pledge</div>
             <div class="cf-pedge-enter-buttons">
-              <div class="cf-pedge-enter-input">$<input type="number" min="0"></div>
-              <button class="cf-pedge-button primary-button">Continue</button>
+              <div class="cf-pedge-enter-input">$<input class="free-input" type="number" min="1" value="1"></div>
+              <button class="cf-pedge-button primary-button free-button">Continue</button>
             </div>
           </div>
         </div>
-        <div class="cf-bambo mfix">
+        <div class="cf-bambo mfix modal-bambo">
           <div class="cf-head-fix">
-            <label class="container"><div class="cf-black-head">Bamboo Stand<div class="cf-pledge"><span>Pledge $2  5 or more</span></div></div>
-              <input type="radio" name="radio">
+            <label class="container"><div class="cf-black-head pfix">Bamboo Stand<div class="cf-pledge"><span>Pledge $25 or more</span></div></div>
+              <input type="radio" class="cf-checked-ba" name="radio">
               <span class="checkmark"></span>
             </label>
-            <div class="cf-left-button"><h1>64 <span>left</span></h1></div>
+            <div class="cf-left-button pfix"><h1>64 <span>left</span></h1></div>
           </div>
           <div class="cf-bambo-text">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</div>
-          <div class="cf-pedge-enter">
+          <div class="cf-pedge-enter-bambo">
             <div class="pedge-enter-text">Enter your pledge</div>
             <div class="cf-pedge-enter-buttons">
-              <div class="cf-pedge-enter-input">$<input type="number" min="75" value="75"></div>
-              <button class="cf-pedge-button primary-button">Continue</button>
+              <div class="cf-pedge-enter-input">$<input class="ba-input" type="number" min="25" value="25"></div>
+              <button class="cf-pedge-button primary-button ba-button">Continue</button>
             </div>
           </div>
         </div>
-        <div class="cf-black mfix">
+        <div class="cf-black mfix modal-black">
           <div class="cf-head-fix">
-            <label class="container"><div class="cf-black-head">Black Edition Stand<div class="cf-pledge"><span>Pledge $75 or more</span></div></div>
-              <input type="radio" checked=" " name="radio">
+            <label class="container"><div class="cf-black-head pfix">Black Edition Stand<div class="cf-pledge"><span>Pledge $75 or more</span></div></div>
+              <input type="radio" class="cf-checked-bl" name="radio">
               <span class="checkmark"></span>
             </label>
-            <div class="cf-left-button"><h1>101 <span>left</span></h1></div>
+            <div class="cf-left-button pfix"><h1>101 <span>left</span></h1></div>
           </div>
           <div class="cf-black-text">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</div>
-          <div class="cf-pedge-enter">
+          <div class="cf-pedge-enter-black">
             <div class="pedge-enter-text">Enter your pledge</div>
             <div class="cf-pedge-enter-buttons">
-              <div class="cf-pedge-enter-input">$<input type="number" min="25" value="25"></div>
-              <button class="cf-pedge-button primary-button">Continue</button>
+              <div class="cf-pedge-enter-input">$<input class="bl-input" type="number" min="75" value="75"></div>
+              <button class="cf-pedge-button primary-button bl-button">Continue</button>
             </div>
           </div>
         </div>
         <div class="cf-mahogany mfix">
           <div class="cf-head-fix notworking">
-            <label class="container"><div class="cf-black-head">Mahogany Special Edition<div class="cf-pledge"><span>Pledge $200 or more</span></div></div>
-              <input type="radio" class="notworking" name="radio">
+            <label class="container"><div class="cf-black-head pfix">Mahogany Special Edition<div class="cf-pledge"><span>Pledge $200 or more</span></div></div>
+              <input type="radio" class="cf-checked" class="notworking" name="radio">
               <span class="checkmark"></span>
             </label>
-            <div class="cf-left-button"><h1>0 <span>left</span></h1></div>
+            <div class="cf-left-button pfix"><h1>0 <span>left</span></h1></div>
           </div>
         <div class="cf-mahogany-text">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.  Shipping is included.</div>  
         </div>
